syntax = "proto3";

package nosogo;

option go_package = "./protobuf";

// Block chain
message Block {
  uint64 height = 1;
  string hash = 2;
  string prev_hash = 3;
  int64 timestamp = 4;
  string merkle_root = 5;
  repeated Transaction transactions = 6;
}

message Transaction {
  string hash = 1;
  string type = 2;
  int64 timestamp = 3;
  string sender = 4;
  string receiver = 5;
  uint64 amount = 6;
}


// Blocks Topic
message NewBlock {
  Block block = 1;
}

message NewTransactions {
  repeated Transaction transactions = 1;
}

message BlocksSubMessages {
  oneof payload {
    NewBlock new_block = 1;
    NewTransactions new_transactions = 2;
  }
}

// Network messages
message Handshake {
  string version = 1;
}

message HandshakeResponse {
  string version = 1;
}

message GetBlocks {
  int64 from_height = 1;
  int64 to_height = 2;
  int64 height = 3;
}

message GetBlocksResponse {
  repeated Block blocks = 1;
}

message NetworkMessages {
  oneof payload {
    Handshake handshake = 1;
    HandshakeResponse handshake_response = 2;
    GetBlocks get_blocks = 3;
    GetBlocksResponse get_blocks_response = 4;
  }
}

// DNS
message DNSHost {
  string address = 1;
  int32 port = 2;
  string id = 3;
}

message DNSHostResponse {
  DNSHost dns = 1;
}

message DNSSeedsResponse {
  repeated DNSHost seeds = 1;
}

message DNSNodesResponse {
  repeated DNSHost nodes = 1;
}
